# torchlib_template

./: .gitignore  CMakeLists.txt  README.md  load_torchlib.sh
resources/: module.jit
src/: main.cpp
